<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/download_item_bg_selector"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/delete_download_history_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_dialog_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/delete_download_history_content"
        android:textColor="#646464"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_dialog_fragment_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/downloadbutton_normal"
            android:text="@string/delete_download_history_btn_cancel"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_fragment_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/downloadbutton_normal"
            android:text="@string/delete_download_history_btn_yes"
            android:textColor="#F53306"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>