<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:background="@drawable/dialog_bg">
 
    <TextView 
        android:id="@+id/delete_item_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/dialog_delete_or_not"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:paddingLeft="32dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_below="@id/delete_item_dialog_text"
        android:weightSum="2">
        
    <Button 
        android:id="@+id/dialog_cancel"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/dialog_button_bg"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textSize="12sp"/>
    
    <Button 
        android:id="@+id/dialog_yes"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/dialog_button_bg"
        android:textColor="@color/white"
        android:text="@string/yes"
        android:textSize="12sp"/>
        
    </LinearLayout>
    
</RelativeLayout>
